--- a/w01.md
+++ b/w01.md
@@ -21,7 +21,7 @@ Debian adalah sistem operasi open source dengan distribusi Linux. Debian merupak
 5. [Git](https://id.wikipedia.org/wiki/Git)<br>
 Git adalah open-source software untuk version-control sehingga kita bisa mengetahui perubahan suatu kodingan pada saat software development. Git didesain untuk kolaborasi para programmer. Di dalam git, kita bisa membuat branch dari project utama dan kemudian jika sudah dirasa bagus dan selesai, maka kita bisa mengabungkannya ke branch utama. 
 
-6. [Bash] (https://en.wikipedia.org/wiki/Bash_(Unix_shell\))<br>
+6. [Bash] (https://en.wikipedia.org/wiki/Bash_\(Unix_shell\))<br>
 Bash merupakan tempat untuk kita memberikan instruksi pada komputer dengan sistem operasi GNU. Dengan menggunakan bash, kita bisa menjalankan program lain. Bash merupakan singkatan dari "Bourne-Again SHell". 
 
 
