--- a/w01.md
+++ b/w01.md
@@ -1,10 +1,10 @@
 ---
-permalink: /W00/
+permalink: /W01/
 ---
 [HOME](../)
 
 <br>
-# Top 10 List of Week 00
+# Top 10 List of Week 01
 
 1. [Virtualization](https://en.wikipedia.org/wiki/Virtualization)<br>
 Anggap kita menggunakan Windows. Kemudian, terdapat beberapa aplikasi yang ingin kita gunakan tetapi hanya bisa dijalankan di macOS. Solusi dari masalah ini adalah virtualisasi, yaitu dalam 1 komputer, kita menggunakan 2 OS, 1 OS sebagai host dan 1 OS lainnya sebagai hasil virtualisasi. Dalam kasus ini, Windows adalah OS hostnya dan macOS adalah hasil virtualisasi.
@@ -15,7 +15,7 @@ Kalo virtualiasasi adalah prosesnya, maka hypervisor adalah softwarenya. Hypervi
 3. [Regular Expression (Regex)](https://en.wikipedia.org/wiki/Regular_expression)<br>
 Regex adalah rangkaian char yang didefinisikan untuk mencari pola. Tehnik ini dibuat oleh theoretical computer science dan formal language theory. Regex ini digunakan pada mesin pencari. Regex juga digunakan oleh banyak bahasa pemrograman.
 
-4. [Debian](https://id.wikipedia.org/wiki/Debian)</br>
+4. [Debian](https://id.wikipedia.org/wiki/Debian)<br>
 Debian adalah sistem operasi open source dengan distribusi Linux. Debian merupakan pilihan populer untuk server. Debian stabil terbaru adalah Debian 10. Debian mempunyai akses ke online repositories yang mempunyai 51 ribu paket lebih.
 
 5. [Git](https://id.wikipedia.org/wiki/Git)<br>
