OS202 aulia-adil

--- a/w03.md
+++ b/w03.md
@@ -1,37 +1,37 @@
 ---
-permalink: /W02/
+permalink: /W03/
 ---
 [HOME](../)
 
 <br>
-# Top 10 List of Week 2
+# Top 10 List of Week 3
 
-1. [Worm](https://us.norton.com/internetsecurity-malware-what-is-a-computer-worm.html)<br>
-Anggap saya mengklik suatu link. Ketika di klik, ternyata link tersebut membuat saya download worm. Karena hal ini, maka *resource* komputer saya bisa di ambil atau di buat backdoor di komputer saya. Dari cerita ini, maka worm adalah salah satu jenis malware yang biasa masuk karena link-link di internet. Maka dari itu, jangan ngeklik link-link yang gak jelas
+1. [Filesystem](https://www.quora.com/What-is-a-filesystem)<br>
+Anggap kita mempunyai sebuah operating system dan hard disk. Hard disk tersebut dipasang ke komputer. Nah pertanyaannya adalah bagaimana OS tersebut menggunakan hard disk? Jawabannya adalah dengan menggunakan filesystem. Jadi filesystem adalah alat OS untuk dia bisa menggunakan dan mengorganisir data dari drive.
 
-2. [Virus](https://us.norton.com/internetsecurity-malware-what-is-a-computer-virus.html)<br>
-Anggap saya download sebuah software gratis. Kemudian software tersebut saya install. Tanpa saya ketahui, ternyata ada kodingan virus di dalam software tersebut. Saya pun secara tidak sadar meng-*execute* kodingan tersebut. Terjadilah hal-hal yang tidak diinginkan seperti yang worm lakukan. Dari cerita ini, maka virus adalah salah satu jenis malware yang biasa masuk karena download software crack-an. Oleh karena itu, kita harus membeli software aslinya agar tidak terkena virus dan membantu developernya tersebut.
+2. [User Space](https://techterms.com/definition/user_space#:~:text=User%20space%20is%20system%20memory,the%20operating%20system%20(OS).)<br>
+OS mengalokasikan sebagian system memory untuk sebuah aplikasi yang ingin dijalan. Alokasi system memory ini disebut sebagai user space.
 
-3. [Virus vs Worm](https://www.kaspersky.com/resource-center/threats/computer-viruses-vs-worms)<br>
-Virus harus diaktivasi oleh host-nya sedangkan worm tidak perlu. Sebagai contoh: anggap kita download file A. Jika di dalamnya terdapat virus, maka kita harus menjalankan file A tersebut. Tetapi, jika di dalamnya terdapat worm, maka worm tersebut akan otomatis jalan ketika kita selesai mendownload file A.
+3. [Kernel Space](https://www.google.com/search?q=user+space&oq=user+sp&aqs=chrome.0.69i59j69i57j0l3j69i60l3.1247j1j9&sourceid=chrome&ie=UTF-8)<br>
+OS mengalokasikan sebagian system memory untuk sebuah aplikasi yang ingin dijalan. Sisa system memory tersebut, digunakan oleh OS itu sendiri. Sisa system memory inilah yang disebut Kernal Space.
 
-4. [Cryptography](https://searchsecurity.techtarget.com/definition/cryptography#:~:text=Cryptography%20is%20a%20method%20of,%22%20stands%20for%20%22writing.%22)<br>
-Anggap kita mempunyai pesan dan ingin mengirimkannya ke A. Pesan tersebut hanya ingin diketahui oleh saya dan A. Karena saya meminta orang lain untuk mengantarkannya, maka saya tidak ingin orang tersebut mengetahui isinya. Oleh karena itu, saya dan A membuat sebuah sandi yang hanya diketahui kita berdua. Ilmu membuat sandi tersebut lah yang disebut cryptography, yaitu membuat ilmu yang mempelajari berbagai tehnik untuk merahasiakan isi informasi.
+4. [Disk Partition](https://www.howtogeek.com/184659/beginner-geek-hard-disk-partitions-explained/)<br>
+Anggap kita mempunyai USB. Di USB ini awalnya hanya merupakan sebuah metal-metal besi. Untuk USB ini bisa menyimpan data, maka kita harus membuat partition di USB ini. Setelah kita membuat 1 partition, kita bisa mem-partition lagi sehingga menjadi banyak partition. Oleh karena itu, partition adalah sebuah container untuk menyimpan data dan partition tersebut juga bisa terdiri dari banyak partition.
 
-5. [Privacy](https://www.google.com/search?q=what+is+privacy&oq=what+is+privacy&aqs=chrome..69i57j0l7.3645j1j9&sourceid=chrome&ie=UTF-8)<br>
-Anggap kita ingin sendirian di rumah. Kemudian tanpa kita sadari, ada seseorang yang memata-matai kita. Orang tersebut mencatat kegiatan kita, kesukaan kita, rencana kita, dll. Setelah mata-mata tersebut mengetahuinya, maka dia menjualnya kepada pihak lain. Dari cerita ini, mata-mata tersebut telah merusak privasi kita, yaitu kondisi di mana tidak diperhatikan oleh orang lain. Maka dari itu, media sosial sangatlah tidak menyenangkan ketika berbagai informasi kita diketahui-nya dan kemudian di jual kepada pihak lain.
+5. [System Memory](https://www.quora.com/Are-RAM-and-System-Memory-on-your-PC-the-same-thing)<br>
+Anggap kita sedang menjalankan program VSCode, Google Chrome, dan Minecraft. Karena ketiga program ini dijalankan, maka data-datanya harus disimpan di suatu tempat agar ketika kita berganti-ganti aplikasi, data-nya masih tetap ada di sana. Tempat untuk menyimpan itulah System Memory, yaitu tempat penyimpanan sementara untuk menyimpan data-data dari program yang sedang dijalankan.
 
-6. [Trojan Horse Virus](https://id.safetydetectives.com/blog/apa-itu-trojan-dan-bagaimana-melindungi-darinya/)<br>
-Anggap kita download file A dan di dalamnya terdapat Trojan Horse Virus. Ketika file A dijalankan, maka Trojan Horse juga ikut dijalankan. Trojan Horse tersebut pun menyerang dan mengambil alih komputer Anda. Dia membuat sandi-sandi aneh di komputer, kemudian mencuri data-data Anda, dan yang terakhir mengekspos data-data pribadi Anda. Dari cerita ini, kita dapat mengetahui apa yang dilakukan Trojan Horse Virus, yaitu virus yang menyerang dan mengambil alih komputer Anda sama seperti kisah Trojan Horse pada jaman dulu.
+6. [User Space vs Kernel Space](https://techterms.com/definition/user_space#:~:text=User%20space%20is%20system%20memory,the%20operating%20system%20(OS).)<br>
+Anggap kita sedang menjalankan Google Chrome dengan OS Windows. Karena Google Chrome cenderung berat untuk dikomputasi, maka Google Chrome ini menjadi nge-lag. Anehnya, ketika Google Chrome nge-lag, komputer kita masih bisa ganti-ganti aplikasi tapi tidak nge-lag. Hal ini bisa terjadi karena Google Chrome tersebut menggunakan User Space sedangkan keseluruhan OS menggunakan kernel space.
 
-7. [Biometrics](https://socs.binus.ac.id/2018/11/29/biometrics-authentication-and-recognition/#:~:text=Physiological%20characteristics%20lebih%20mengarah%20pada,Ada%20berbagai%20macam%20tipe%20biometric.)<br>
-Kamu tahu pembukaan password hp dengan sidik jari? Nah itu metodenya biometrics. Biometrics adalah menggunakan sandi dengan hal-hal unik dari tubuh kita seperti sidik jari, DNA, dan retina. Biometrics ini cenderung lebih aman dibanding menggunakan sandi biasa.  
+7. [Filesystem in User Space](https://www.quora.com/What-is-the-FUSE-file-system)<br>
+Anggap kita mempunyai seorang teman. Teman kita ini ingin membuat sebuah aplikasi dan aplikasi tersebut akan mengotak-atik OS dari penggunanya. Karena dia tidak mempunyai laptop untuk membuatnya, maka dia meminjam kita. Kita gak mau kan OS kita diotak-atik oleh orang lain karena bakalan ribet benerinnya. Oleh karena itu, kita menggunakan Filesystem in User Space (FUSE) untuk menyelesaikan masalah ini. 
 
-8. [Trap Door](https://www.techwalla.com/articles/what-is-a-computer-trapdoor)<br>
-Jika sebuah software mempunyai trap door, maka seseorang tidak perlu menggunakan autentikasi untuk masuk software tersebut. Karena hal ini, maka seorang hacker dapat mengetahui informasi user ketika dia berhasil mengakses atau memasang trap door. Trap door nama lainnya adalah back door. Trap door biasanya dipasang di awal-awal oleh software developernya dan dihapus ketika ingin launching.
+8. [wget](https://www.hostinger.co.id/tutorial/wget-command/)<br>
+Anggap kita ingin update file atau konten terbaru dari badak.cs.ui.ac.id dengan kita menggunakan Debian. Untuk dapat melakukannya kita bisa menggunakan wget. Wget ini merupakan sebuah alat yang dibuat GNU Project dengan kepanjangan World Wide Web dan get. Alat ini mensupport unduhan melalui FTP, SFTP, HTTP, dan HTTPS.
 
-9. [Public Key](https://idcloudhost.com/kamus-hosting/public-key-encryption/#:~:text=Data%20yang%20dienkripsi%20dengan%20kunci,%2F%20SSL%2C%20yang%20memungkinkan%20HTTPS.)<br>
-Anggap saya memiliki kotak surat. Beberapa teman saya ingin mengirimkan pesan kepada saya. Mereka saya berikan kunci untuk bisa mengakses kotak surat tersebut tetapi kunci tersebut hanya membuka lorong kecil agar dapat memasukkan suratnya. Hal ini mengakibatkan mereka tidak dapat mengetahui isi kotak surat saya. Kunci inilah yang disebut public key, yaitu kunci yang digunakan untuk mengirim pesan saja tanpa bisa melihat isi kotak surat tersebut.
+9. [Tar](https://www.hostinger.co.id/tutorial/tar-linux/)<br>
+Anggap kita ingin meng-unzip file di Debian. Jika kita menggunakan Windows, mungkin kita bisa menggunakan Win-Rar. Akan tetapi, untuk di Debian, kita bisa menggunakan Tar. Oleh karena itu, Tar adalah alat untuk men-compress atau de-compress.
 
-10. [Private key](https://idcloudhost.com/kamus-hosting/public-key-encryption/#:~:text=Data%20yang%20dienkripsi%20dengan%20kunci,%2F%20SSL%2C%20yang%20memungkinkan%20HTTPS.)<br>
-Kembali ke kotak surat di atas, karena kotak tersebut hanya milik saya, maka ada sebuah kunci agar kotak tersebut terbuka sehingga saya bisa melihat semua surat yang masuk. Kunci inilah yang disebut private key, yaitu kunci untuk membuka kotak surat milik saya. Sistem public key dan private key ini inti dari sistem Public Key Encryption.
+10. [Token dalam Networking](https://techterms.com/definition/token#:~:text=In%20networking%2C%20a%20token%20is,send%20data%20at%20a%20time.)<br>
+Anggap kita adalah dosen mempunyai server di mana server tersebut adalah tempat pengumpulan tugas para murid. Supaya hanya murid-murid saya saja yang terdaftar, maka saya memberikan mereka token untuk bisa mengumpulkan tugas. Oleh karena itu, token di networking adalah penanda apakah komputer tersebut bisa mengakses komputer lain.
