os202 aulia-adil

--- a/w05.md
+++ b/w05.md
@@ -30,7 +30,7 @@ Tautan ini akan mengarahkan Anda ke zahiraccounting. Menurut saya penjelasannya 
 8. [Apa itu slab allocator?](https://www.kernel.org/doc/gorman/html/understand/understand011.html)<br>
 Tautan ini akan mengarahkan Anda ke kernel.org. Memang sih user interface tampaknya hanya menggunakan html tetapi yang penting isinya sangat menarik karena dibumbui oleh diagram. Ringkasnya, slab allocator adalah sebuah metode di mana ada cache tetap menyimpan objek yang sering digunakan sehingga siap digunakan oleh kernel.
 
-9. [Apa itu buddy system allocator](https://www.halolinux.us/kernel-reference/the-buddy-system-algorithm.html)<br>
+9. [Apa itu buddy system allocator?](https://www.halolinux.us/kernel-reference/the-buddy-system-algorithm.html)<br>
 Tautan ini akan mengarahkan Anda ke halolinux.us. Sebenarnya juga ada dari Geeksforgeeks tetapi untuk variasi tautan menjadikan sumber ilmu kita menjadi banyak. Situs ini juga memberikan gambaran tentang allocation memory. Ringkasnya, buddy system adalah sebuah metode pengalokasian memory dan pengaturan algoritma yang mengatur memory dengan perpangkatan 2.
 
 10. [Apa itu non-uniform memory acess?](http://www.techplayon.com/what-is-numa-non-uniform-memory-access/)<br>
